added  woman.jpg

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS_training</title>
+  <link rel="stylesheet" href="">
 </head>
 <body>
   <h1>main sheet</h1>
+  <!-- <h2> здрасти</h2> -->
+  <div>
+    <img src="woman.jpg" alt="error" width="150">
+    <p>
+      Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты.
+    </p>
+  </div>
 </body>
 </html>
