--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS_training</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
   <h1>main sheet</h1>
   <!-- <h2> здрасти</h2> -->
-  <div>
-    <img src="woman.jpg" alt="error" width="150">
-    <p>
-      Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты.
-    </p>
+  <div> 
+    <img src="img/woman.jpg" alt="error" width="150">
   </div>
+  <script src=""></script> 
 </body>
 </html>
