include test CSS js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <div> 
     <img src="img/woman.jpg" alt="error" width="150">
   </div>
-  <script src=""></script> 
+  <script src="scripts/main.js"></script> 
 </body>
 </html>
