switching from one page to another

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
   <h1>main sheet</h1>
-   <ul>
-    <li>
-      
-    </li>
-   </ul>
+  <a href="second.html" style="color:red; font-size:20px;">Page 2</a>
+
+   <ol>
+   <li>Lorem,ipsun</li>
+   <li>Lorem,ipsun</li>
+   <li>Lorem,ipsun</li>
+   </ol>
   <!-- <h2> здрасти</h2> -->
   <div> 
     <img src="img/woman.jpg" alt="error" width="150">
