addad Dzen <pre></pre>

--- a/second.html
+++ b/second.html
@@ -6,9 +6,22 @@
   <title>CSS2</title>
 </head>
 <body>
-  <a href="index.html">first page</a>
+  <div>
+    <a href="index.html">first page</a>
+  </div>
+  <div>
+    <a href="https://dzen.ru" style="color: crimson;">Dzen.ru</a>
+  </div>
   <p>
     <img src="/img/cat1.jpeg" alt="coteyrf" width="150">
   </p>
+  <pre>
+    раз ромашка
+    два ромашка
+    три ромашка
+     четыре ромашка
+      пять ромашка
+        шесть  ромашка
+  </pre>
 </body>
 </html>
