--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <h1>main sheet</h1>
-  <a href="second.html" style="color:red; font-size:20px;">Page 2</a>
+  <div>
+    <a href="second.html" style="color:red; font-size:20px;">Page 2</a>
+  </div>
 
    <ol>
    <li>Lorem,ipsun</li>
