--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
   <div> 
     <img src="img/woman.jpg" alt="error" width="150">
   </div>
-  <script src="scripts/main.js"></script> 
+  <script src="scripts/main.js"></script>
+  <table border="10">
+    <tr>
+      <td>1</td>
+      <td>2</td>
+      <td>3</td>
+      <td>4</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>6</td>
+      <td>7</td>
+      <td>8</td>
+    </tr>
+  </table>
 </body>
 </html>
