--- a/second.html
+++ b/second.html
@@ -23,6 +23,13 @@
       пять ромашка
         шесть  ромашка
   </pre>
-  
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing <br> Quia asperiores soluta architecto praesentium, quod mollitia excepturi eum dolor nostrum totam vero molestias quas officiis. Ducimus veniam culpa nulla quam beatae?
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, quibusdam. Corporis ex aut tempora quidem assumenda magnam ipsam, <span style="color: darkred;">mqui earu</span> velit sapiente animi esse vel aperiam quae adipisci, quis quo!
+      
+  </p>
+  <hr>
 </body>
 </html>
