--- a/index.html
+++ b/index.html
@@ -36,5 +36,15 @@
       <td>8</td>
     </tr>
   </table>
+  <form action="">
+    <input type="text">
+    <button>Кнопка</button><br>
+    <textarea name="" id="">чтото будем писать много</textarea>
+    <select name="cyti" id="">
+      <option value="">item 1</option>
+      <option value="">item 2</option>
+      <option value="">item 3</option>
+    </select>
+  </form>
 </body>
 </html>
