--- a/index.html
+++ b/index.html
@@ -46,5 +46,12 @@
       <option value="">item 3</option>
     </select>
   </form>
+  <div title="Подскзка">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti, consequatur ut soluta sunt, suscipit, iste autem tenetur debitis veritatis reiciendis. Ratione ullam voluptates molestiae, quibusdam placeat minima molestias ipsa.
+  </div>
+  <div hidden="hidden"> <!--скрывает текст-->
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatem nostrum excepturi libero aspernatur, eveniet dolorum eaque facilis beatae ipsum rem laudantium et quae omnis similique aut! Consequuntur, asperiores similique!
+  </div>
+  
 </body>
 </html>
